...
 */
enum class Tab(
    val route: String,
    @StringRes val label: Int,
    @DrawableRes val icon: Int,
    @StringRes val loadingMessage: Int,
    val navItemTag: String,
    val screenTag: String,
) {
  EVENTS(
      "events",
      R.string.tab_events,
      R.drawable.ic_tab_events,
      R.string.loading_events,
...
